Fix bug in NdbRmStateStore. Need to use @Lob annotation for blob

--- a/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/pom.xml
+++ b/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/pom.xml
@@ -78,6 +78,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <properties>
+                  <property>
+                    <name>listener</name>
+                    <value>org.apache.hadoop.test.TimedOutTestsListener</value>
+                 </property>
+                </properties>
+                <argLine>-Djava.library.path=/usr/local/mysql/lib</argLine>
+               </configuration>
+            </plugin>
         </plugins>
     </build>
 
